<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaAndVideo</string>
    <string name="hello_world">Hello world!</string>
    <string name="media">播放音频</string>
    <string name="soundpool">soundpool播放音频</string>
    <string name="video">播放视频</string>
    <!-- 音频播放界面需要的文字 -->
    <string name="mediaPlayer">mediaPlayer</string>
    <string name="Assets">Assets</string>
    <string name="external_store">SD卡音频</string>
    <string name="network">来自网络</string>
    <!-- soundpool 按钮字母 -->
    <string name="button1">按钮1</string>
    <string name="button2">按钮2</string>
    <string name="button3">按钮3</string>
    <string name="pause1">暂停1</string>
    <string name="pause2">暂停2</string>
    <string name="pause3">暂停3</string>
    <string name="release">释放资源</string>
    <string name="stop">全部停止</string>
</resources>
