<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0f0"
    android:orientation="vertical" >
    <Button 
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"/>
    <Button 
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"/>
    <Button 
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"/>
    
    <Button 
        android:id="@+id/pause1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause1"/>
    <Button 
        android:id="@+id/pause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause2"/>
    <Button 
        android:id="@+id/pause3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause3"/>
    <Button 
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"/>
    <Button 
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release"/>

</LinearLayout>
