<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button 
        android:id="@+id/media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media"/>
        <Button 
        android:id="@+id/soundpool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundpool"/>
    <Button 
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"/>
    </LinearLayout>    
    <FrameLayout 
        android:id="@+id/fragment_rooter"
        android:background="#00000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
    </FrameLayout>

</FrameLayout>
